# img-raw-proc

./: .clang-tidy  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt  cli.cpp  cli.hpp  img.cpp  img.hpp  main.cpp
